fix(style): hide nmobJs scrollbar on first load, add ease to to hScroller test.

--- a/src/scss/pages/horizontal-scroller/index.scss
+++ b/src/scss/pages/horizontal-scroller/index.scss
@@ -34,10 +34,6 @@
         pointer-events: none;
     }
 
-    &__row {
-        background-color: $grey;
-    }
-
     &__column {
         padding: calc(var(--header-height) * 0.5);
         pointer-events: all;
